--- a/packages/map_widget/scss/main.scss
+++ b/packages/map_widget/scss/main.scss
@@ -197,6 +197,12 @@ input[type='text'] {
   }
 }
 
+.pager{
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .user_actions_container {
   @media only screen and (min-width: 320px) {
     @include transition(top 0.3s ease);
